cmake_minimum_required(VERSION 3.11)
project(example-cpp)

set(CMAKE_CXX_STANDARD 20)

include_directories(../../src/include)
link_directories(../../build/release/src)
include_directories(../../third_party/antlr4_cypher/include)
include_directories(../../third_party/antlr4_runtime/src)
include_directories(../../third_party/spdlog)
include_directories(../../third_party/nlohmann_json)
include_directories(../../third_party/pyparse)
include_directories(../../third_party/utf8proc/include)
include_directories(../../third_party/pybind11/include)
include_directories(../../third_party/re2/include)
include_directories(../../third_party/concurrentqueue)
include_directories(../../external/build/arrow/install/include)

add_executable(example-cpp main.cpp)
add_executable(generate-cpp generate.cpp)
add_executable(generateString-cpp generateString.cpp)
add_executable(single-cpp singleCSV.cpp)
add_executable(lookupTest-cpp lookupTest.cpp)
add_executable(lookupThread-cpp lookupThread.cpp)
add_executable(stringBenchmark-cpp stringBenchmark.cpp)
add_executable(stringLookup-cpp stringLookup.cpp)
target_link_libraries(example-cpp kuzu)
target_link_libraries(single-cpp kuzu)
target_link_libraries(lookupTest-cpp kuzu)
target_link_libraries(lookupThread-cpp kuzu)
target_link_libraries(stringBenchmark-cpp kuzu)
target_link_libraries(stringLookup-cpp kuzu)


